--- a/app/src/main/res/layout/activity_add_story.xml
+++ b/app/src/main/res/layout/activity_add_story.xml
@@ -47,7 +47,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="173dp"
                 android:gravity="top"
-                android:hint="Deskripsi"
+                android:hint="@string/deskripsi"
                 android:layout_marginBottom="16dp"
                 android:inputType="textMultiLine"
                 android:maxLines="10"
