--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
         android:id="@+id/tv_Header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Dicoding Stories"
+        android:text="@string/main_header"
         android:textSize="26sp"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toTopOf="parent"
