--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -91,7 +91,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailTextView"
-        app:startIconDrawable="@drawable/ic_baseline_email_24">
+        app:startIconDrawable="@drawable/ic_baseline_email_24"
+        android:alpha="0"
+        tools:alpha="100" >
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/ed_login_email"
@@ -100,7 +102,6 @@
             android:ems="10"
             android:inputType="textEmailAddress"
             tools:ignore="SpeakableTextPresentCheck"
-
             android:alpha="0"
             tools:alpha="100" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -131,7 +132,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordTextView"
-        app:startIconDrawable="@drawable/ic_baseline_lock_24">
+        app:startIconDrawable="@drawable/ic_baseline_lock_24"
+        android:alpha="0"
+        tools:alpha="100" >
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/ed_login_password"
@@ -140,7 +143,6 @@
             android:ems="10"
             android:inputType="textPassword"
             tools:ignore="SpeakableTextPresentCheck"
-
             android:alpha="0"
             tools:alpha="100" />
     </com.google.android.material.textfield.TextInputLayout>
