--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
 
     <color name="pink">#F06292</color>
     <color name="navy">#2D3D4F</color>
+    <color name="navy_disable">#452D3D4F</color>
 
 
 </resources>
