--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,17 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <item
-        android:id="@+id/action_maps"
-        android:orderInCategory="100"
-        android:title="Maps"
-        android:icon="@drawable/baseline_map_24"
-        app:showAsAction="ifRoom"
-        />
-    <item
         android:id="@+id/action_logout"
         android:orderInCategory="100"
         android:title="Logout"
         android:icon="@drawable/baseline_logout_24"
-        app:showAsAction="never"
-        />
+        app:showAsAction="ifRoom"
+        android:showAsAction="never"/>
 </menu>
