--- a/app/src/main/res/layout/activity_add_story.xml
+++ b/app/src/main/res/layout/activity_add_story.xml
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            app:layout_constraintBottom_toTopOf="@+id/uploadButton"
+            app:layout_constraintBottom_toTopOf="@+id/switchButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
@@ -46,9 +46,9 @@
                 android:id="@+id/TextAreaDescription"
                 android:layout_width="match_parent"
                 android:layout_height="173dp"
+                android:layout_marginBottom="16dp"
                 android:gravity="top"
                 android:hint="@string/deskripsi"
-                android:layout_marginBottom="16dp"
                 android:inputType="textMultiLine"
                 android:maxLines="10"
                 android:overScrollMode="always"
@@ -84,17 +84,23 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/cameraButton" />
 
+        <com.google.android.material.materialswitch.MaterialSwitch
+            android:id="@+id/switchButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:text="@string/show_your_upload_location"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+
         <Button
             android:id="@+id/uploadButton"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="8dp"
+            android:layout_margin="20dp"
             android:text="@string/upload_story"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/switchButton" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
